SFDCProject/src/objects/Referral_Program__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Referral_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Eligibility__c</fullName>
        <description>To Be Determined Later if/how this will be used.</description>
        <label>Point of Eligibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referee_Amount__c</fullName>
        <label>Referee Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_Amount__c</fullName>
        <label>Referred Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <picklist>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LADWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met-Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasadena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland General Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vineland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XCEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Referral Program (OLD)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Referral Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>